Fixed request form; fixed line wrapping under bullet

--- a/css/shellStyles.css
+++ b/css/shellStyles.css
@@ -388,6 +388,12 @@ html {
   float: left;
   margin-right: 15px; }
 
+.table {
+  display: table; }
+
+.table-cell {
+  display: table-cell; }
+
 .centerTxt {
   text-align: center; }
 
