--- a/scss/formStyles.scss
+++ b/scss/formStyles.scss
@@ -8,6 +8,10 @@ body{
     background: $colorPink;
 }
 
+.padleftTop{
+    padding: 10px 0 0 5px;
+}
+
 .hide{
     display: none;
 }
