--- a/scss/homeStyles.scss
+++ b/scss/homeStyles.scss
@@ -108,8 +108,7 @@
     }
 }
 
-.table{display: table;}
-.table-cell{display: table-cell}
+
 
 .homeContent{
     color: $colorGrey;
