--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -26,6 +26,9 @@ html{
     margin-right: 15px;
 }
 
+.table{display: table;}
+.table-cell{display: table-cell}
+
 .centerTxt{text-align: center;}
 .title{color: $colorPurple;}
 .colorTxt{color: $colorPurple}
